Adds a row and two columns.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
   </head>
   <body>
   <div class="container">
+    <div class="row">
     <div class="jumbotron">
     <h1>Would You Love To Go There?</h1>
     <p>I know I would. And other things people say.</p>
     </div>
+
+    <div class="col-md-8"><p>This is this first coloumn that we are using
+    to practice making columns. This first column is a width of eight and
+    I am writting this to test the column's width of eight.</p></div>
+    <div class="col-md-4"><p>Column 2 is only a width of four, and so it is not
+      as long as column one.</p></div>
 
     <h2>The Bottom of the Ocean.<h2>
       <div class="well">
@@ -18,10 +25,6 @@
           under da sea.</p>
         <p>There are friendly crustations, no accusations, take it from me</p>
       </div>
-
-
-
-
 
     <p>See what recent visitors had to say about the depths of the sea:</p>
     <blockquote class="bg-info">
@@ -33,7 +36,7 @@
       <footer>Jake B.</footer>
       <footer>Tom G.</footer>
     </blockquote>
-
-  </dv>
+  </div>
+  </div>
   </body>
 </html>
