Add package details into rows and columns, add additional style to styles.css.

--- a/index.html
+++ b/index.html
@@ -1,42 +1,114 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title>Vactaion Destination.</title>
-  </head>
-  <body>
+<head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <title>Vactaion Destination.</title>
+</head>
+<body>
   <div class="container">
     <div class="row">
-    <div class="jumbotron">
-    <h1>Would You Love To Go There?</h1>
-    <p>I know I would. And other things people say.</p>
-    </div>
-
-    <div class="col-md-8"><p>This is this first coloumn that we are using
-    to practice making columns. This first column is a width of eight and
-    I am writting this to test the column's width of eight.</p></div>
-    <div class="col-md-4"><p>Column 2 is only a width of four, and so it is not
-      as long as column one.</p></div>
-
-    <h2>The Bottom of the Ocean.<h2>
-      <div class="well">
-        <p>There are many exciting adventures waiting for you
-          under da sea.</p>
-        <p>There are friendly crustations, no accusations, take it from me</p>
+      <div class="jumbotron">
+        <h1>Would You Love To Go There?</h1>
+        <p>I know I would. And other things people say.</p>
       </div>
 
-    <p>See what recent visitors had to say about the depths of the sea:</p>
-    <blockquote class="bg-info">
-      <p>"The terror is real."</p>
-      <footer>Ann .M</footer>
-    </blockquote>
-    <blockquote class="bg-info">
-      <p>"My lungs almost exploded."</p>
-      <footer>Jake B.</footer>
-      <footer>Tom G.</footer>
-    </blockquote>
-  </div>
-  </div>
-  </body>
-</html>
+      <div class="col-md-8"><p>This is this first coloumn that we are using
+        to practice making columns. This first column is a width of eight and
+        I am writting this to test the column's width of eight.</p>
+      </div>
+      <div class="col-md-4"><p>Column 2 is only a width of four, and so it is not
+        as long as column one.</p>
+      </div>
+
+      <h2>The Bottom of the Ocean.<h2>
+        <div class="well">
+          <p>There are many exciting adventures waiting for you
+            under da sea.</p>
+          <p>There are friendly crustations, no accusations, take it from me</p>
+        </div>
+
+          <p>See what recent visitors had to say about the depths of the sea:</p>
+          <blockquote class="bg-info">
+            <p>"The terror is real."</p>
+            <footer>Ann .M</footer>
+          </blockquote>
+          <blockquote class="bg-info">
+            <p>"My lungs almost exploded."</p>
+            <footer>Jake B.</footer>
+            <footer>Tom G.</footer>
+          </blockquote>
+        </div>
+
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <h2 class="panel-title">Packaged Deals For You!</h2>
+          </div>
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-md-3">
+                <p class="package">Activites:</p>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>Cancer Sunday Funday!</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>Deep See Diving.</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>Clam Diggin'</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3">
+                <p class="package">Dates:</p>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>Every Sunday in Summer.</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>Mondays-Fridays, 10am-4pm</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>All daylight hours.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3">
+                <p class="package">Cost:</p>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>Whatcha got?</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>At least one lung</li>
+                </ul>
+              </div>
+              <div class="col-md-3">
+                <ul class="package">
+                  <li>'bout tree fiddy</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
+    </html>
